--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,15 @@
 Package: file2db
-Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: A Simple Framework to Batch Load Data From Multiple Files Into a Database
+Version: 0.0.0.9000
+Authors@R: 
+    person("Chris", "Fletcher", , "SaladSyrup@outlook.com", role = c("aut", "cre"))
+Description: A tool for automating the process of loading data from a large number of files
+    into a database. file2db can pre-process files prior to reading and post-process
+    data before writing to a database. The user can provide alternate file and
+    database functions to allow file2db to work with any file format or database.
+License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.1
+URL: https://github.com/SaladSyrup/file2db
+BugReports: https://github.com/SaladSyrup/file2db/issues
