--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: file2db
-Title: A Simple Framework to Batch Load Data From Multiple Files Into a Database
+Title: A Simple Framework to Batch Load Data From Multiple Files Into a
+    Database
 Version: 0.0.0.9000
 Authors@R: 
     person("Chris", "Fletcher", , "SaladSyrup@outlook.com", role = c("aut", "cre"))
-Description: A tool for automating the process of loading data from a large number of files
-    into a database. file2db can pre-process files prior to reading and post-process
-    data before writing to a database. The user can provide alternate file and
-    database functions to allow file2db to work with any file format or database.
+Description: A tool for automating the process of loading data from a
+    large number of files into a database. file2db can pre-process files
+    prior to reading and post-process data before writing to a database.
+    The user can provide alternate file and database functions to allow
+    file2db to work with any file format or database.
 License: MIT + file LICENSE
+URL: https://github.com/SaladSyrup/file2db
+BugReports: https://github.com/SaladSyrup/file2db/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
-URL: https://github.com/SaladSyrup/file2db
-BugReports: https://github.com/SaladSyrup/file2db/issues
