--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ BugReports: https://github.com/SaladSyrup/file2db/issues
 Imports: 
     DBI,
     methods
+Suggests: 
+    RSQLite
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
