--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(f2dbRun)
 export(f2dbTask)
 export(f2dbTaskFunction)
 exportClasses(f2dbEndTask)
+exportClasses(f2dbJob)
 exportClasses(f2dbObject)
 exportClasses(f2dbTask)
 exportClasses(f2dbTaskFunction)
