--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ export(f2dbEndTask)
 export(f2dbRun)
 export(f2dbTask)
 export(f2dbTaskFunction)
+export(taskCall)
 exportClasses(f2dbEndTask)
 exportClasses(f2dbJob)
 exportClasses(f2dbObject)
 exportClasses(f2dbTask)
 exportClasses(f2dbTaskFunction)
 exportMethods(f2dbRun)
+exportMethods(taskCall)
