--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(f2dbRun)
 export(f2dbTask)
 export(f2dbTaskFunction)
 export(name)
+export(nextTask)
 export(taskCall)
 export(taskFunction)
 exportClasses(f2dbEndTask)
@@ -16,5 +17,7 @@ exportClasses(f2dbTaskFunction)
 exportMethods("taskFunction<-")
 exportMethods(f2dbRun)
 exportMethods(name)
+exportMethods(nextTask)
+exportMethods(show)
 exportMethods(taskCall)
 exportMethods(taskFunction)
