--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 export("nextTask<-")
 export("taskFunction<-")
-export(f2dbEndTask)
+export(f2dbObject)
 export(f2dbRun)
 export(f2dbTask)
 export(f2dbTaskFunction)
@@ -10,7 +10,6 @@ export(name)
 export(nextTask)
 export(taskCall)
 export(taskFunction)
-exportClasses(f2dbEndTask)
 exportClasses(f2dbJob)
 exportClasses(f2dbObject)
 exportClasses(f2dbTask)
