--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("jobInput<-")
 export("nextTask<-")
 export("taskFunction<-")
+export(appendTask)
 export(f2dbEndTask)
 export(f2dbJob)
 export(f2dbObject)
@@ -21,6 +22,7 @@ exportClasses(f2dbTaskFunction)
 exportMethods("jobInput<-")
 exportMethods("nextTask<-")
 exportMethods("taskFunction<-")
+exportMethods(appendTask)
 exportMethods(f2dbRun)
 exportMethods(jobInput)
 exportMethods(name)
