--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export("jobInput<-")
 export("nextTask<-")
 export("taskFunction<-")
-export(appendTask)
+export(addTask)
 export(f2dbEndTask)
 export(f2dbJob)
 export(f2dbObject)
@@ -22,7 +22,7 @@ exportClasses(f2dbTaskFunction)
 exportMethods("jobInput<-")
 exportMethods("nextTask<-")
 exportMethods("taskFunction<-")
-exportMethods(appendTask)
+exportMethods(addTask)
 exportMethods(f2dbRun)
 exportMethods(jobInput)
 exportMethods(name)
