--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("jobInput<-")
 export("nextTask<-")
 export("taskFunction<-")
+export(addNewTask)
 export(addTask)
 export(f2dbEndTask)
 export(f2dbJob)
@@ -22,6 +23,7 @@ exportClasses(f2dbTaskFunction)
 exportMethods("jobInput<-")
 exportMethods("nextTask<-")
 exportMethods("taskFunction<-")
+exportMethods(addNewTask)
 exportMethods(addTask)
 exportMethods(f2dbRun)
 exportMethods(jobInput)
