--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(f2dbRun)
 export(f2dbTask)
 export(f2dbTaskFunction)
 export(jobInput)
+export(listTasks)
 export(name)
 export(nextTask)
 export(taskCall)
@@ -27,6 +28,7 @@ exportMethods(addNewTask)
 exportMethods(addTask)
 exportMethods(f2dbRun)
 exportMethods(jobInput)
+exportMethods(listTasks)
 exportMethods(name)
 exportMethods(nextTask)
 exportMethods(taskCall)
