--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,7 @@
 export("jobInput<-")
 export("nextTask<-")
 export("taskFunction<-")
-export(addNewTask)
-export(addTask)
+export("taskList<-")
 export(f2dbEndTask)
 export(f2dbJob)
 export(f2dbObject)
@@ -12,11 +11,11 @@ export(f2dbRun)
 export(f2dbTask)
 export(f2dbTaskFunction)
 export(jobInput)
-export(listTasks)
 export(name)
 export(nextTask)
 export(taskCall)
 export(taskFunction)
+export(taskList)
 exportClasses(f2dbEndTask)
 exportClasses(f2dbJob)
 exportClasses(f2dbTask)
@@ -24,12 +23,11 @@ exportClasses(f2dbTaskFunction)
 exportMethods("jobInput<-")
 exportMethods("nextTask<-")
 exportMethods("taskFunction<-")
-exportMethods(addNewTask)
-exportMethods(addTask)
+exportMethods("taskList<-")
 exportMethods(f2dbRun)
 exportMethods(jobInput)
-exportMethods(listTasks)
 exportMethods(name)
 exportMethods(nextTask)
 exportMethods(taskCall)
 exportMethods(taskFunction)
+exportMethods(taskList)
