--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("jobInput<-")
 export("nextTask<-")
 export("taskFunction<-")
 export("taskList<-")
+export(f2dbAppendTable)
 export(f2dbEndTask)
 export(f2dbJob)
 export(f2dbObject)
@@ -16,6 +17,7 @@ export(nextTask)
 export(taskCall)
 export(taskFunction)
 export(taskList)
+exportClasses(f2dbAppendTable)
 exportClasses(f2dbEndTask)
 exportClasses(f2dbJob)
 exportClasses(f2dbTask)
