--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export("taskFunction<-")
 export("taskList<-")
 export(f2dbEndTask)
 export(f2dbJob)
+export(f2dbListTask)
 export(f2dbObject)
 export(f2dbRun)
 export(f2dbTask)
@@ -18,6 +19,7 @@ export(taskFunction)
 export(taskList)
 exportClasses(f2dbEndTask)
 exportClasses(f2dbJob)
+exportClasses(f2dbListTask)
 exportClasses(f2dbTask)
 exportClasses(f2dbTaskFunction)
 exportMethods("jobInput<-")
