--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(f2dbTaskFunction)
 export(jobInput)
 export(name)
 export(nextTask)
+export(setTaskLogger)
+export(setf2dbLogger)
 export(taskCall)
 export(taskFunction)
 export(taskList)
