--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ License: MIT + file LICENSE
 URL: https://github.com/SaladSyrup/file2db
 BugReports: https://github.com/SaladSyrup/file2db/issues
 Imports: 
+    log4r,
     methods,
     rlang
 Suggests: 
