--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export("taskFunction<-")
 export("taskList<-")
 export(f2dbBatch)
 export(f2dbEndTask)
+export(f2dbIterateTask)
 export(f2dbJob)
 export(f2dbListTask)
 export(f2dbObject)
@@ -23,8 +24,8 @@ export(taskFunction)
 export(taskList)
 exportClasses(f2dbBatch)
 exportClasses(f2dbEndTask)
+exportClasses(f2dbIterateTask)
 exportClasses(f2dbJob)
-exportClasses(f2dbListTask)
 exportClasses(f2dbTask)
 exportClasses(f2dbTaskFunction)
 exportMethods("jobInput<-")
